[gd_scene load_steps=17 format=3 uid="uid://brvd1rgtdhrcg"]

[ext_resource type="Texture2D" uid="uid://bcyj1rn4i6oyq" path="res://Monsters/Belka/Cone-Sheet.png" id="1_3ys4o"]
[ext_resource type="Script" path="res://Monsters/Belka/cone.gd" id="1_fjp7a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5jodm"]
atlas = ExtResource("1_3ys4o")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_207xy"]
atlas = ExtResource("1_3ys4o")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_psb8o"]
atlas = ExtResource("1_3ys4o")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ap25"]
atlas = ExtResource("1_3ys4o")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnuaa"]
atlas = ExtResource("1_3ys4o")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t164x"]
atlas = ExtResource("1_3ys4o")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxsmm"]
atlas = ExtResource("1_3ys4o")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t160m"]
atlas = ExtResource("1_3ys4o")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_twynn"]
atlas = ExtResource("1_3ys4o")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsgx1"]
atlas = ExtResource("1_3ys4o")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fji84"]
atlas = ExtResource("1_3ys4o")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2phi6"]
atlas = ExtResource("1_3ys4o")
region = Rect2(48, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hccsm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jodm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_207xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psb8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ap25")
}],
"loop": false,
"name": &"appear",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnuaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t164x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxsmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t160m")
}],
"loop": true,
"name": &"def",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_twynn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsgx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fji84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2phi6")
}],
"loop": false,
"name": &"end",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_615ml"]
radius = 5.09902

[node name="Cone" type="Area2D" groups=["Cone"]]
script = ExtResource("1_fjp7a")

[node name="Cone" type="AnimatedSprite2D" parent="."]
z_index = 3
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_hccsm")
animation = &"appear"
frame = 3
frame_progress = 1.0

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_615ml")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Cone" to="." method="_on_cone_animation_finished"]
